--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -35,3 +35,6 @@ zh-CN:
   Save : '保存'
   Manual Search : '帮助问题搜索'
   '# of records' : '记录件数'
+  Delete the record? : '删除？'
+  Delete  : '删除'
+  Successfully Deleted! : '已删除！'
